build/Jobs/v3/README.md
# Cloud Talent Solution API - Apps Script Client Library

Auto-generated client library for using the **Cloud Talent Solution API (version: v3)** in Google Apps Script.

## Metadata

- **Last Checked:** Wed, 01 Jul 2026 00:02:55 GMT
- **Last Modified:** Wed, 01 Jul 2026 00:02:55 GMT
- **Created:** Sun, 20 Jul 2025 16:35:36 GMT



---

## API Reference

### `projects`

#### `projects.complete()`

Completes the specified prefix with keyword suggestions. Intended for use by a job search auto-complete search box.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.query` | `string` | No | Required. The query used to generate suggestions. The maximum number of allowed characters is 255. |
| `params.languageCode` | `string` | No | Deprecated. Use language_codes instead. Optional. The language of the query. This is the BCP-47 language code, such as "en-US" or "sr-Latn". For more information, see [Tags for Identifying Languages](https://tools.ietf.org/html/bcp47). For CompletionType.JOB_TITLE type, only open jobs with the same language_code are returned. For CompletionType.COMPANY_NAME type, only companies having open jobs with the same language_code are returned. For CompletionType.COMBINED type, only open jobs with the same language_code or companies having open jobs with the same language_code are returned. The maximum number of allowed characters is 255. |
| `params.pageSize` | `integer` | No | Required. Completion result count. The maximum allowed page size is 10. |
| `params.type` | `string` | No | Optional. The completion topic. The default is CompletionType.COMBINED. |
| `params.name` | `string` | Yes | Required. Resource name of project the completion is performed within. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.languageCodes` | `string` | No | Optional. The list of languages of the query. This is the BCP-47 language code, such as "en-US" or "sr-Latn". For more information, see [Tags for Identifying Languages](https://tools.ietf.org/html/bcp47). For CompletionType.JOB_TITLE type, only open jobs with the same language_codes are returned. For CompletionType.COMPANY_NAME type, only companies having open jobs with the same language_codes are returned. For CompletionType.COMBINED type, only open jobs with the same language_codes or companies having open jobs with the same language_codes are returned. The maximum number of allowed characters is 255. |
| `params.companyName` | `string` | No | Optional. If provided, restricts completion to specified company. The format is "projects/{project_id}/companies/{company_id}", for example, "projects/api-test-project/companies/foo". |
| `params.scope` | `string` | No | Optional. The scope of the completion. The defaults is CompletionScope.PUBLIC. |

### `projects.companies`

#### `projects.companies.create()`

Creates a new company entity.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.parent` | `string` | Yes | Required. Resource name of the project under which the company is created. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.companies.get()`

Retrieves specified company.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.name` | `string` | Yes | Required. The resource name of the company to be retrieved. The format is "projects/{project_id}/companies/{company_id}", for example, "projects/api-test-project/companies/foo". |

#### `projects.companies.delete()`

Deletes specified company. Prerequisite: The company has no jobs associated with it.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.name` | `string` | Yes | Required. The resource name of the company to be deleted. The format is "projects/{project_id}/companies/{company_id}", for example, "projects/api-test-project/companies/foo". |

#### `projects.companies.patch()`

Updates specified company. Company names can't be updated. To update a company name, delete the company and all jobs associated with it, and only then re-create them.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.name` | `string` | Yes | Required during company update. The resource name for a company. This is generated by the service when a company is created. The format is "projects/{project_id}/companies/{company_id}", for example, "projects/api-test-project/companies/foo". |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.companies.list()`

Lists all companies associated with the service account.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.pageToken` | `string` | No | Optional. The starting indicator from which to return results. |
| `params.requireOpenJobs` | `boolean` | No | Optional. Set to true if the companies requested must have open jobs. Defaults to false. If true, at most page_size of companies are fetched, among which only those with open jobs are returned. |
| `params.parent` | `string` | Yes | Required. Resource name of the project under which the company is created. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.pageSize` | `integer` | No | Optional. The maximum number of companies to be returned, at most 100. Default is 100 if a non-positive number is provided. |

### `projects.jobs`

#### `projects.jobs.searchForAlert()`

Searches for jobs using the provided SearchJobsRequest. This API call is intended for the use case of targeting passive job seekers (for example, job seekers who have signed up to receive email alerts about potential job opportunities), and has different algorithmic adjustments that are targeted to passive job seekers. This call constrains the visibility of jobs present in the database, and only returns jobs the caller has permission to search against.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.parent` | `string` | Yes | Required. The resource name of the project to search within. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.jobs.search()`

Searches for jobs using the provided SearchJobsRequest. This call constrains the visibility of jobs present in the database, and only returns jobs that the caller has permission to search against.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.parent` | `string` | Yes | Required. The resource name of the project to search within. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.jobs.create()`

Creates a new job. Typically, the job becomes searchable within 10 seconds, but it may take up to 5 minutes.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.parent` | `string` | Yes | Required. The resource name of the project under which the job is created. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.jobs.list()`

Lists jobs by filter.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.filter` | `string` | No | Required. The filter string specifies the jobs to be enumerated. Supported operator: =, AND The fields eligible for filtering are: * `companyName` * `requisitionId` * `status` Available values: OPEN, EXPIRED, ALL. Defaults to OPEN if no value is specified. At least one of `companyName` and `requisitionId` must present or an INVALID_ARGUMENT error is thrown. Sample Query: * companyName = "projects/api-test-project/companies/123" * companyName = "projects/api-test-project/companies/123" AND requisitionId = "req-1" * companyName = "projects/api-test-project/companies/123" AND status = "EXPIRED" * requisitionId = "req-1" * requisitionId = "req-1" AND status = "EXPIRED" |
| `params.pageToken` | `string` | No | Optional. The starting point of a query result. |
| `params.pageSize` | `integer` | No | Optional. The maximum number of jobs to be returned per page of results. If job_view is set to JobView.JOB_VIEW_ID_ONLY, the maximum allowed page size is 1000. Otherwise, the maximum allowed page size is 100. Default is 100 if empty or a number < 1 is specified. |
| `params.parent` | `string` | Yes | Required. The resource name of the project under which the job is created. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.jobView` | `string` | No | Optional. The desired job attributes returned for jobs in the search response. Defaults to JobView.JOB_VIEW_FULL if no value is specified. |

#### `projects.jobs.batchDelete()`

Deletes a list of Jobs by filter.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.parent` | `string` | Yes | Required. The resource name of the project under which the job is created. The format is "projects/{project_id}", for example, "projects/api-test-project". |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.jobs.patch()`

Updates specified job. Typically, updated contents become visible in search results within 10 seconds, but it may take up to 5 minutes.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.name` | `string` | Yes | Required during job update. The resource name for the job. This is generated by the service when a job is created. The format is "projects/{project_id}/jobs/{job_id}", for example, "projects/api-test-project/jobs/1234". Use of this field in job queries and API calls is preferred over the use of requisition_id since this value is unique. |
| `params.requestBody` | `object` | Yes | The request body. |

#### `projects.jobs.get()`

Retrieves the specified job, whose status is OPEN or recently EXPIRED within the last 90 days.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.name` | `string` | Yes | Required. The resource name of the job to retrieve. The format is "projects/{project_id}/jobs/{job_id}", for example, "projects/api-test-project/jobs/1234". |

#### `projects.jobs.delete()`

Deletes the specified job. Typically, the job becomes unsearchable within 10 seconds, but it may take up to 5 minutes.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.name` | `string` | Yes | Required. The resource name of the job to be deleted. The format is "projects/{project_id}/jobs/{job_id}", for example, "projects/api-test-project/jobs/1234". |

### `projects.clientEvents`

#### `projects.clientEvents.create()`

Report events issued when end user interacts with customer's application that uses Cloud Talent Solution. You may inspect the created events in [self service tools](https://console.cloud.google.com/talent-solution/overview). [Learn more](https://cloud.google.com/talent-solution/docs/management-tools) about self service tools.

| Parameter | Type | Required | Description |
|---|---|---|---|
| `params.parent` | `string` | Yes | Parent project name. |
| `params.requestBody` | `object` | Yes | The request body. |